--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "cookie-session": "^1.4.0",
     "ejs": "^3.1.5",
     "express": "^4.17.1",
+    "express-partials": "^0.3.0",
     "express-session": "^1.17.1",
     "nodemon": "^2.0.6",
     "sqlite3": "^5.0.0"
